# DeepLearningOperators

./: .gitignore  README.md
CPPExamples/: CMakeLists.txt
CPPExamples/config/: network_config.json
CPPExamples/data/models_and_parameters/CIFAR-10-87-model/: BatchNorm10_beta.npy  BatchNorm10_gamma.npy  BatchNorm10_running_mean.npy  BatchNorm10_running_variance.npy  BatchNorm13_beta.npy  BatchNorm13_gamma.npy  BatchNorm13_running_mean.npy  BatchNorm13_running_variance.npy  BatchNorm18_beta.npy  BatchNorm18_gamma.npy  BatchNorm18_running_mean.npy  BatchNorm18_running_variance.npy  BatchNorm21_beta.npy  BatchNorm21_gamma.npy  BatchNorm21_running_mean.npy  BatchNorm21_running_variance.npy  BatchNorm27_beta.npy  BatchNorm27_gamma.npy  BatchNorm27_running_mean.npy  BatchNorm27_running_variance.npy  BatchNorm2_beta.npy  BatchNorm2_gamma.npy  BatchNorm2_running_mean.npy  BatchNorm2_running_variance.npy  BatchNorm5_beta.npy  BatchNorm5_gamma.npy  BatchNorm5_running_mean.npy  BatchNorm5_running_variance.npy  Conv12_bias.npy  Conv12_kernel.npy  Conv17_bias.npy  Conv17_kernel.npy  Conv1_bias.npy  Conv1_kernel.npy  Conv20_bias.npy  Conv20_kernel.npy  Conv4_bias.npy  Conv4_kernel.npy  Conv9_bias.npy  Conv9_kernel.npy  (+4 more)
CPPExamples/data/models_and_parameters/model_kernel3x3_dense128/: Conv1_filters.npy  Conv3_biases.npy  Dense8_biases.npy  Dense8_weights.npy  OutputLayer_biases.npy  OutputLayer_weights.npy  weights_metadata.json
CPPExamples/data/models_and_parameters/model_kernel3x3_dense256/: Conv1_biases.npy  Conv3_filters.npy  Conv5_filters.npy  OutputLayer_weights.npy  weights_metadata.json
CPPExamples/data/models_and_parameters/model_kernel3x3_dense64/: Conv1_biases.npy  Conv3_filters.npy  Conv5_biases.npy  Conv5_filters.npy  OutputLayer_biases.npy  weights_metadata.json
CPPExamples/data/models_and_parameters/model_kernel5x5_dense128/: Conv1_biases.npy  Conv3_filters.npy  Conv5_biases.npy  Dense8_biases.npy  OutputLayer_biases.npy  OutputLayer_weights.npy  weights_metadata.json
CPPExamples/data/models_and_parameters/model_kernel5x5_dense256/: Conv1_biases.npy  Conv3_filters.npy  Conv5_biases.npy  Dense8_biases.npy  OutputLayer_biases.npy
CPPExamples/models/Keras_Models/: model_kernel3x3_dense64.keras  model_kernel5x5_dense128.keras
CPPExamples/models/ONNX_Models/: model_kernel3x3_dense128.onnx  model_kernel3x3_dense256.onnx  model_kernel3x3_dense64.onnx  model_kernel5x5_dense128.onnx  model_kernel5x5_dense256.onnx
CPPExamples/operators/include/: BatchNormalizationLayer.h  ConvolutionLayer.h  DenseLayer.h  FlattenLayer.h  MaxPoolingLayer.h  ReLULayer.h  SoftmaxLayer.h
CPPExamples/operators/src/: BatchNormalizationLayer.cpp  ConvolutionLayer.cpp  DenseLayer.cpp  FlattenLayer.cpp  MaxPoolingLayer.cpp  ReLULayer.cpp  SoftmaxLayer.cpp
CPPExamples/report/: model_test_report.json  model_unittest_report.json
CPPExamples/src/: main.cpp  onnx_inference.cpp  tests.cpp
CPPExamples/test_operators/include/: layer_tests.h  model_tests.h
CPPExamples/test_operators/model_tests/: model_tests.cpp
CPPExamples/test_operators/unit_tests/: layer_tests.cpp
CPPExamples/utilities/: ModelLoader.cpp  ModelLoader.h
PythonExamples/: main.py  test_image.py  tests.py
PythonExamples/config/: network_config.json
PythonExamples/data/models_and_parameters/model_kernel3x3_dense128/: Conv1_biases.npy  Conv3_filters.npy  Conv5_biases.npy  Conv5_filters.npy
PythonExamples/data/models_and_parameters/model_kernel3x3_dense256/: Conv1_filters.npy  Conv3_biases.npy  Conv5_biases.npy  Dense8_biases.npy  Dense8_weights.npy  OutputLayer_biases.npy
PythonExamples/data/models_and_parameters/model_kernel3x3_dense64/: Conv1_filters.npy  Conv3_biases.npy  Dense7_biases.npy  Dense7_weights.npy  OutputLayer_weights.npy
PythonExamples/data/models_and_parameters/model_kernel5x5_dense128/: Conv1_filters.npy  Conv3_biases.npy  Conv5_filters.npy  Dense8_weights.npy
PythonExamples/data/models_and_parameters/model_kernel5x5_dense256/: Conv1_filters.npy  Conv3_biases.npy  Conv5_filters.npy  Dense8_weights.npy  OutputLayer_weights.npy  weights_metadata.json
PythonExamples/models/: model_kernel3x3_dense128.keras  model_kernel3x3_dense256.keras
PythonExamples/operators/: conv.py  dense.py  flatten.py  max_pool.py
PythonExamples/report/: model_test_report.json  model_unittest_report.json
PythonExamples/test_operators/model_tests/: model_tests.py
PythonExamples/test_operators/unit_tests/: layers_tests.py
